# windows-llvm-clang-playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  configure.bat
cmake/: windows.cmake
main/: CMakeLists.txt  main.cpp  main.manifest  main.rc
